--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ pydantic>=1.8.0,<2.0.0
 uvicorn>=0.15.0,<0.16.0
 python-multipart>=0.0.6
 requests>=2.26.0
+python-jose[cryptography]>=3.2.0
+passlib[bcrypt]>=1.7.0
